<resources>
    <string name="apiKey">AIzaSyAaNX1fn-1iMGRrf0bTgTjg25_EApDCG_U</string>
    <string name="app_name">Prevailist</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="firstname">Firstname</string>
    <string name="lastName">Lastname</string>
    <string name="age">Age</string>
    <string name="tokenAuth">Authorization</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="signup">SignUp</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="saved">Saved</string>
    <string name="map">Map</string>
    <string name="search">Search</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_friend">Search Friend</string>
    <string name="my_friends">My Friends</string>
    <string name="friendGroupName">My Friends</string>
    <string name="back">Back</string>
    <string name="find_friend">find friend</string>

    friendGroupName = view.findViewById( R.id.friendGroupName);
    friendGroupDescription = view.findViewById( R.id.friendGroupDescription );
    friendGroupProfileImage = view.findViewById( R.id.friendGroupProfileImageView );
    mContext = view.getContext();
    addTofriendGroupButton = itemView.findViewById(R.id.addToFriends);
    removeFromfriendGroupButton = itemView.findViewById(R.id.removeFromfriendGroup);
</resources>
